1.0.0
Added custom file chooser.
Improved opening c,c++ etc style include files from nav menu.
Fixed double click select on large wrapped line.
Updated installaled root .desktop file.
Updated default "Run As Root" pref.
Fixed opening root editor from menu.
Raise find/replace dialog when dialog is already open.
Improved Double click on hyphenated word to include "_"
Double click on hyphenated word ( aaa-bbb-ccc ) or on version string ( 1.2.3 ) now selects correctly.
Tweaked shlang plugin.
Tweaked single instance.
Fixed badly exported DISPLAY variable.
Changed KKEDIT_FILE_LIST passed to tools to newline seperated list.
Fixes for getting glib/gio etc defs in 'Search in GTK Docs'.
Fixed ctags version not supporting depth to recurse.
Fixed creating temporary files/folders.
Lowered version needed for Qt5WebEngineWidgets.
Fixed wrong foldername in buildplugs.sh
Fixed bracket match.
Fixed displaying plugin 'Help'
Removed confusing 'Home' button from docviewer.
Redone plugin build system.
Fixed staged install via DESTDIR.
Switch to qtwebengine from obsolete qtwebkit.

0.7.5
Fixed msgid and single mode when opening on same workspace number but different display ( display is taken fromm DISPLAY var ).
Fixed misplaced call to search qt5 api docs.

0.7.4
Fixed show docs when no files open.
Fixed "Find in documentation".
Updated aboutbox links.
Added "Spring" theme.
Fixed opening include files from nav menu if name includes '/'.
Added winter theme.
Done savefileas in remote control.
Added newfile to remote control.
Done insertfile to in remote control.
Done selectbetween to in remote control.
Done move to tab:line:col in remote control.
Done printfile in remote control.
Done togglebookmark in remote control.
Done insertnl in remote control.
Done inserttext in remote control.
Added cut, copy and paste to remote control.
Fixed hang if no data to send.
Done send cursor position in remote control ( tabnumber:line:column ).
Done send selected text in remote control.